example-credential-issuer/deploy/template.yaml
AWSTemplateFormatVersion: "2010-09-09"

Transform:
  - AWS::Serverless-2016-10-31
Description: >-
  Wallet Stub BE
Parameters:
  Environment:
    Description: "The environment type"
    Type: "String"
    Default: dev
    AllowedValues:
      - "dev"
      - "build"
      - "staging"
      - "integration"
  LegacyVpcStackName:
    Description: >
      The name of the legacy vpc in which this container will be deployed - soon to be deprecated.
    Type: String
    Default: vpc
  VpcStackName:
    Description: >
      The name of the spoke vpc in which this container will be deployed, delegated by the secure pipeline.
    Type: String
    Default: spoke-vpc
  PermissionsBoundary:
    Description: "The ARN of the permissions boundary to apply when creating IAM roles"
    Type: String
    Default: "none"
  ContainerPort:
    Description: >
      The port on which the container is running
    Type: Number
    Default: 8080
  DocumentBuilderStackName:
    Description: The cloudformation stack name of the Document Builder.
    Type: String
    Default: "wallet-doc-builder"
  DocumentSigningCertificateIssuerStackName:
    Type: String
    Description: >
      The stack name of the Document Signing Certificate Issuer.
    Default: "wallet-dsc-issuer"

Conditions:
  StackNameIsWalletCredIssuerBE: !Equals [!Ref "AWS::StackName", wallet-cred-issuer]

  IsBuildOrStagingOrInt: !Or
    - !Equals [!Ref Environment, build]
    - !Equals [!Ref Environment, staging]
    - !Equals [!Ref Environment, integration]

  IsStaging: !Equals [!Ref Environment, staging]

  IsIntegration: !Equals [!Ref Environment, integration]

  UsePermissionsBoundary:
    Fn::Not:
      - Fn::Equals:
          - !Ref PermissionsBoundary
          - "none"

  DeployLegacyVpcResources: !Or
    - !Equals [!Ref Environment, dev]
    - !Equals [!Ref Environment, build]
    - !Equals [!Ref Environment, staging]
    - !Equals [!Ref Environment, integration]

  DeploySpokeVpcResources: !Or
    - !Equals [!Ref Environment, dev]
    - !Equals [!Ref Environment, build]
    - !Equals [!Ref Environment, staging]
    - !Equals [!Ref Environment, integration]

  MigrateTrafficToSpokeVpc: !Or
    - !Equals [ !Ref Environment, dev ]
    - !Equals [ !Ref Environment, build ]
    - !Equals [ !Ref Environment, staging ]
    - !Equals [ !Ref Environment, integration ]

Mappings:
  EnvironmentVariables:
    dev:
      SelfUrl: "example-credential-issuer.wallet-onboarding.dev.account.gov.uk"
      CredentialStoreUrl: "stub-credential-issuer.wallet-onboarding.dev.account.gov.uk"
      AuthServerUrl: "https://sts-mock.wallet-onboarding.dev.account.gov.uk"
      WalletAppDeepLinkUrl: "mobile.dev.account.gov.uk/wallet"
      CredentialIssuerImageRepository: arn:aws:ecr:eu-west-2:219494607463:repository/cred-issuer-image-repo-containerrepository-7qtvqf9sk6lf
      CertificatesBucketName: "wallet-doc-sign-cert-899032468188-certificates"
      DocumentSigningKey1Arn: arn:aws:kms:eu-west-2:899032468188:key/f74c0aae-5c7a-42e2-a6c1-287aa60e5878
      CertificateAuthorityArn: arn:aws:acm-pca:eu-west-2:899032468188:certificate-authority/f513efea-9757-4d08-9dfb-733b86f1933e
      StatusListUrl: "status-list-mock.wallet-onboarding.dev.account.gov.uk"
    build:
      SelfUrl: "example-credential-issuer.wallet-onboarding.build.account.gov.uk"
      CredentialStoreUrl: "stub-credential-issuer.wallet-onboarding.build.account.gov.uk"
      AuthServerUrl: "https://sts-mock.wallet-onboarding.build.account.gov.uk"
      WalletAppDeepLinkUrl: "mobile.build.account.gov.uk/wallet"
      CredentialIssuerImageRepository: arn:aws:ecr:eu-west-2:899032468188:repository/cred-issuer-image-repo-containerrepository-g8ydsvmkc2et
      CertificatesBucketName: "wallet-doc-sign-cert-899032468188-certificates"
      DocumentSigningKey1Arn: arn:aws:kms:eu-west-2:899032468188:key/f74c0aae-5c7a-42e2-a6c1-287aa60e5878
      CertificateAuthorityArn: arn:aws:acm-pca:eu-west-2:899032468188:certificate-authority/f513efea-9757-4d08-9dfb-733b86f1933e
      StatusListUrl: "status-list-mock.wallet-onboarding.build.account.gov.uk"
    staging:
      SelfUrl: "example-credential-issuer.wallet-onboarding.staging.account.gov.uk"
      CredentialStoreUrl: "stub-credential-issuer.wallet-onboarding.staging.account.gov.uk"
      AuthServerUrl: "https://token.staging.account.gov.uk"
      WalletAppDeepLinkUrl: "mobile.staging.account.gov.uk/wallet"
      CredentialIssuerImageRepository: arn:aws:ecr:eu-west-2:899032468188:repository/cred-issuer-image-repo-containerrepository-g8ydsvmkc2et
      CertificatesBucketName: "wallet-doc-sign-cert-899032468188-certificates"
      DocumentSigningKey1Arn: arn:aws:kms:eu-west-2:899032468188:key/f74c0aae-5c7a-42e2-a6c1-287aa60e5878
      CertificateAuthorityArn: arn:aws:acm-pca:eu-west-2:899032468188:certificate-authority/f513efea-9757-4d08-9dfb-733b86f1933e
      StatusListUrl: "api.crs.staging.account.gov.uk"
    integration:
      SelfUrl: "example-credential-issuer.wallet-onboarding.integration.account.gov.uk"
      CredentialStoreUrl: "stub-credential-issuer.wallet-onboarding.integration.account.gov.uk"
      AuthServerUrl: "https://sts-mock.wallet-onboarding.integration.account.gov.uk"
      WalletAppDeepLinkUrl: "mobile.integration.account.gov.uk/wallet"
      CredentialIssuerImageRepository: arn:aws:ecr:eu-west-2:899032468188:repository/cred-issuer-image-repo-containerrepository-g8ydsvmkc2et
      CertificatesBucketName: "wallet-doc-sign-cert-228170791542-certificates"
      DocumentSigningKey1Arn: "arn:aws:kms:eu-west-2:228170791542:key/112cc5ff-e83c-4985-8e52-6ae39433210a"
      CertificateAuthorityArn: arn:aws:acm-pca:eu-west-2:228170791542:certificate-authority/a25b18b1-2a1f-4ff0-91c0-cd65a49c948e
      StatusListUrl: "status-list-mock.wallet-onboarding.integration.account.gov.uk"
Resources:
  # LEGACY SECURITY GROUPS - soon to be depracated
  WalletBELoadBalancerSG:
    Type: 'AWS::EC2::SecurityGroup'
    Condition: DeployLegacyVpcResources
    Properties:
      GroupDescription: >-
        Wallet Stub BE LoadBalancer Security Group
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow from anyone on port 443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      VpcId:
        Fn::ImportValue: !Sub "${LegacyVpcStackName}-VpcId"

  WalletBELoadBalancerSGEgressToECSSecurityGroup:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Condition: DeployLegacyVpcResources
    Properties:
      GroupId: !GetAtt WalletBELoadBalancerSG.GroupId
      IpProtocol: tcp
      Description: >-
        Egress between the Wallet Stub BE load balancer and the Wallet Stub BE ECS security group
      DestinationSecurityGroupId: !GetAtt WalletBEECSSecurityGroup.GroupId
      FromPort: !Ref ContainerPort
      ToPort: !Ref ContainerPort

  WalletBEECSSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Condition: DeployLegacyVpcResources
    Properties:
      GroupDescription: >-
        Wallet Stub BE ECS Security Group permitting outbound to HTTPs.
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow HTTPS outbound only
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
      VpcId:
        Fn::ImportValue: !Sub "${LegacyVpcStackName}-VpcId"

  WalletBEECSSecurityGroupIngressFromLoadBalancer:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Condition: DeployLegacyVpcResources
    Properties:
      IpProtocol: tcp
      Description: >-
        Wallet Stub BE ECS permits inbound from the Wallet Stub BE load balancer.
      FromPort: !Ref ContainerPort
      ToPort: !Ref ContainerPort
      GroupId: !GetAtt WalletBEECSSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WalletBELoadBalancerSG.GroupId

  # SPOKE SECURITY GROUPS - soon to be depracated
  WalletBELoadBalancerSGSpoke:
    Type: 'AWS::EC2::SecurityGroup'
    Condition: DeploySpokeVpcResources
    Properties:
      GroupDescription: >-
        Wallet Stub BE LoadBalancer Security Group - spoke-vpc
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow from anyone on port 443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      VpcId:
        Fn::ImportValue: !Sub "${VpcStackName}-VpcId"

  WalletBELoadBalancerSGEgressToECSSecurityGroupSpoke:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Condition: DeploySpokeVpcResources
    Properties:
      GroupId: !GetAtt WalletBELoadBalancerSGSpoke.GroupId
      IpProtocol: tcp
      Description: >-
        Egress between the Wallet Stub BE load balancer and the Wallet Stub BE ECS security group - spoke-vpc
      DestinationSecurityGroupId: !GetAtt WalletBEECSSecurityGroupSpoke.GroupId
      FromPort: !Ref ContainerPort
      ToPort: !Ref ContainerPort

  WalletBEECSSecurityGroupSpoke:
    Type: 'AWS::EC2::SecurityGroup'
    Condition: DeploySpokeVpcResources
    Properties:
      GroupDescription: >-
        Wallet Stub BE ECS Security Group permitting outbound to HTTPs - spoke-vpc
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow HTTPS outbound only
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
      VpcId:
        Fn::ImportValue: !Sub "${VpcStackName}-VpcId"

  WalletBEECSSecurityGroupIngressFromLoadBalancerSpoke:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Condition: DeploySpokeVpcResources
    Properties:
      IpProtocol: tcp
      Description: >-
        Wallet Stub BE ECS permits inbound from the Wallet Stub BE load balancer - spoke-vpc
      FromPort: !Ref ContainerPort
      ToPort: !Ref ContainerPort
      GroupId: !GetAtt WalletBEECSSecurityGroupSpoke.GroupId
      SourceSecurityGroupId: !GetAtt WalletBELoadBalancerSGSpoke.GroupId

  # **************************************
  # ACCESS LOGS
  WalletBEAPIGWAccessLogsGroup:
    Type: AWS::Logs::LogGroup
    Metadata:
      checkov:
        skip:
          - id: CKV_AWS_158
            rule: "Ensure that CloudWatch Log Group is encrypted by KMS"
            comment: KMS encryption not required as log group will not contain sensitive data.
    Properties:
      LogGroupName: !Sub /aws/apigateway/${AWS::StackName}-WalletBE-API-GW-AccessLogs
      RetentionInDays: 14

  WalletBEECSAccessLogsGroup:
    Type: AWS::Logs::LogGroup
    Metadata:
      checkov:
        skip:
          - id: CKV_AWS_158
            rule: "Ensure that CloudWatch Log Group is encrypted by KMS"
            comment: KMS encryption not required as log group will not contain sensitive data.
    Properties:
      LogGroupName: !Sub /aws/ecs/${AWS::StackName}-Wallet-Stub-Back-ECS
      RetentionInDays: 14

  # Commenting out WalletBEECSAccessLogsGroupSubscriptionFilter as onboarding to CSLS/Splunk is blocked for now
  #  WalletBEECSAccessLogsGroupSubscriptionFilter:
  #    Type: AWS::Logs::SubscriptionFilter
  #    Condition: IsBuildOrStagingOrInt
  #    Properties:
  #      DestinationArn: arn:aws:logs:eu-west-2:885513274347:destination:csls_cw_logs_destination_prodpython-2
  #      FilterPattern: ""
  #      LogGroupName: !Ref WalletBEECSAccessLogsGroup

  # LEGACY LOAD BALANCER - soon to be depracated
  WalletBELoadBalancer:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Condition: DeployLegacyVpcResources
    Properties:
      Scheme: internal
      SecurityGroups:
        - !GetAtt WalletBELoadBalancerSG.GroupId
      Subnets:
        - Fn::ImportValue: !Sub "${LegacyVpcStackName}-PrivateSubnetIdA"
        - Fn::ImportValue: !Sub "${LegacyVpcStackName}-PrivateSubnetIdB"
        - Fn::ImportValue: !Sub "${LegacyVpcStackName}-PrivateSubnetIdC"
      Type: application
      LoadBalancerAttributes:
        - Key: access_logs.s3.enabled
          Value: true
        - Key: access_logs.s3.bucket
          Value: !Sub di-lb-access-logs-${AWS::AccountId}-${AWS::Region}
        - Key: access_logs.s3.prefix
          Value: !Sub wallet-stub-back-${Environment}
        - Key: idle_timeout.timeout_seconds
          Value: 60
        - Key: routing.http.drop_invalid_header_fields.enabled
          Value: true
      Tags:
        - Key: FMSRegionalPolicy
          Value: false
        - Key: CustomPolicy
          Value: true

  WalletBELoadBalancerListenerTargetGroupECS:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Condition: DeployLegacyVpcResources
    Properties:
      HealthCheckEnabled: TRUE
      HealthCheckProtocol: HTTP
      HealthCheckPath: "/healthcheck"
      HealthCheckTimeoutSeconds: 2
      HealthCheckIntervalSeconds: 60
      HealthyThresholdCount: 2
      Matcher:
        HttpCode: 200-499
      Port: 80
      Protocol: HTTP
      TargetType: ip
      VpcId:
        Fn::ImportValue: !Sub "${LegacyVpcStackName}-VpcId"
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 60

  WalletBELoadBalancerListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Condition: DeployLegacyVpcResources
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref WalletBELoadBalancerListenerTargetGroupECS
          Type: forward
      LoadBalancerArn: !Ref WalletBELoadBalancer
      Port: 443
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Sub "{{resolve:ssm:/${Environment}/Platform/ACM/PrimaryZoneWildcardCertificateARN}}"
      SslPolicy: ELBSecurityPolicy-TLS13-1-2-2021-06

  # SPOKE LOAD BALANCER - soon to be depracated
  WalletBELoadBalancerSpoke:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Condition: DeploySpokeVpcResources
    Properties:
      Scheme: internal
      SecurityGroups:
        - !GetAtt WalletBELoadBalancerSGSpoke.GroupId
      Subnets:
        - Fn::ImportValue: !Sub "${VpcStackName}-PrivateSubnetIdA"
        - Fn::ImportValue: !Sub "${VpcStackName}-PrivateSubnetIdB"
        - Fn::ImportValue: !Sub "${VpcStackName}-PrivateSubnetIdC"
      Type: application
      LoadBalancerAttributes:
        - Key: access_logs.s3.enabled
          Value: true
        - Key: access_logs.s3.bucket
          Value: !Sub di-lb-access-logs-${AWS::AccountId}-${AWS::Region}
        - Key: access_logs.s3.prefix
          Value: !Sub wallet-stub-back-spoke-${Environment}
        - Key: idle_timeout.timeout_seconds
          Value: 60
        - Key: routing.http.drop_invalid_header_fields.enabled
          Value: true
      Tags:
        - Key: FMSRegionalPolicy
          Value: false
        - Key: CustomPolicy
          Value: true

  WalletBELoadBalancerListenerTargetGroupECSSpoke:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Condition: DeploySpokeVpcResources
    Properties:
      HealthCheckEnabled: TRUE
      HealthCheckProtocol: HTTP
      HealthCheckPath: "/healthcheck"
      HealthCheckTimeoutSeconds: 2
      HealthCheckIntervalSeconds: 60
      HealthyThresholdCount: 2
      Matcher:
        HttpCode: 200-499
      Port: 80
      Protocol: HTTP
      TargetType: ip
      VpcId:
        Fn::ImportValue: !Sub "${VpcStackName}-VpcId"
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 60

  WalletBELoadBalancerListenerSpoke:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Condition: DeploySpokeVpcResources
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref WalletBELoadBalancerListenerTargetGroupECSSpoke
          Type: forward
      LoadBalancerArn: !Ref WalletBELoadBalancerSpoke
      Port: 443
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Sub "{{resolve:ssm:/${Environment}/Platform/ACM/PrimaryZoneWildcardCertificateARN}}"
      SslPolicy: ELBSecurityPolicy-TLS13-1-2-2021-06
  # **************************************    

  # API GATEWAY
  WalletBEApiGwHttpEndpoint:
    Type: 'AWS::ApiGatewayV2::Api'
    Properties:
      Name: !Sub wallet-stub-Back-${Environment}-${AWS::StackName}
      Description: !Sub "Wallet Stub Backend API. ${AWS::StackName}"
      ProtocolType: HTTP

  # LEGACY API INTEGRATION - soon to be depracated
  WalletBEApiGwHttpEndpointIntegration:
    Type: 'AWS::ApiGatewayV2::Integration'
    Properties:
      ApiId: !Ref WalletBEApiGwHttpEndpoint
      IntegrationType: HTTP_PROXY
      ConnectionId:
        Fn::ImportValue: !Sub "${LegacyVpcStackName}-VpcLinkId"
      ConnectionType: VPC_LINK
      IntegrationMethod: ANY
      IntegrationUri: !Ref WalletBELoadBalancerListener
      PayloadFormatVersion: '1.0'
      RequestParameters:
        overwrite:header.x-govuk-signin-source-ip: $context.identity.sourceIp
      TlsConfig:
        ServerNameToVerify: !Ref WalletBECustomDomain
    
  # LEGACY API INTEGRATION - soon to be depracated
  WalletBEApiGwHttpEndpointIntegration:
    Type: 'AWS::ApiGatewayV2::Integration'
    Condition: DeployLegacyVpcResources
    Properties:
      ApiId: !Ref WalletBEApiGwHttpEndpoint
      IntegrationType: HTTP_PROXY
      ConnectionId:
        Fn::ImportValue: !Sub "${LegacyVpcStackName}-VpcLinkId"
      ConnectionType: VPC_LINK
      IntegrationMethod: ANY
      IntegrationUri: !Ref WalletBELoadBalancerListener
      PayloadFormatVersion: '1.0'
      RequestParameters:
        overwrite:header.x-govuk-signin-source-ip: $context.identity.sourceIp
      TlsConfig:
        ServerNameToVerify: !Ref WalletBECustomDomain

  # SPOKE API INTEGRATION
  WalletBEApiGwHttpEndpointIntegrationSpoke:
    Type: 'AWS::ApiGatewayV2::Integration'
    Condition: DeploySpokeVpcResources
    Properties:
      ApiId: !Ref WalletBEApiGwHttpEndpoint
      IntegrationType: HTTP_PROXY
      ConnectionId:
        Fn::ImportValue: !Sub "${VpcStackName}-VpcLinkId"
      ConnectionType: VPC_LINK
      IntegrationMethod: ANY
      IntegrationUri: !Ref WalletBELoadBalancerListenerSpoke
      PayloadFormatVersion: '1.0'
      RequestParameters:
        overwrite:header.x-govuk-signin-source-ip: $context.identity.sourceIp
      TlsConfig:
        ServerNameToVerify: !Ref WalletBECustomDomain

  WalletBEAPIGWRoute:
    Type: 'AWS::ApiGatewayV2::Route'
    Properties:
      ApiId: !Ref WalletBEApiGwHttpEndpoint
      RouteKey: 'ANY /{proxy+}'
      Target: !Join
        - /
        - - integrations
          - !If
            - MigrateTrafficToSpokeVpc
            - !Ref WalletBEApiGwHttpEndpointIntegrationSpoke
            - !Ref WalletBEApiGwHttpEndpointIntegration

  WalletBEAPIStageDefault:
    Type: 'AWS::ApiGatewayV2::Stage'
    Properties:
      ApiId: !Ref WalletBEApiGwHttpEndpoint
      StageName: $default
      AutoDeploy: true
      DefaultRouteSettings:
        DataTraceEnabled: false
        DetailedMetricsEnabled: true
        ThrottlingBurstLimit: 20
        ThrottlingRateLimit: 20
      AccessLogSettings:
        DestinationArn: !GetAtt WalletBEAPIGWAccessLogsGroup.Arn
        Format: >-
          { "requestId":"$context.requestId", "ip": "$context.identity.sourceIp", "requestTime":"$context.requestTime", "httpMethod":"$context.httpMethod", "path": "$context.path", "routeKey":"$context.routeKey", "status":"$context.status", "protocol":"$context.protocol", "responseLength":"$context.responseLength" }

  WalletBECustomDomain:
    Type: AWS::ApiGatewayV2::DomainName
    Properties:
      DomainName: !If
        - StackNameIsWalletCredIssuerBE
        - !FindInMap [EnvironmentVariables, !Ref Environment, SelfUrl]
        - !Sub
          - "${AWS::StackName}-${SelfUrl}"
          - SelfUrl: !FindInMap [EnvironmentVariables, !Ref Environment, SelfUrl]
      DomainNameConfigurations:
        - CertificateArn: !Sub "{{resolve:ssm:/${Environment}/Platform/ACM/PrimaryZoneWildcardCertificateARN}}"
          EndpointType: REGIONAL
          SecurityPolicy: TLS_1_2

  WalletBEApiRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      Name: !Ref WalletBECustomDomain
      Type: A
      HostedZoneId: !Sub "{{resolve:ssm:/${Environment}/Platform/Route53/PrimaryZoneID}}"
      AliasTarget:
        DNSName: !GetAtt WalletBECustomDomain.RegionalDomainName
        HostedZoneId: !GetAtt WalletBECustomDomain.RegionalHostedZoneId
        EvaluateTargetHealth: false

  WalletBEApiMapping:
    Type: AWS::ApiGatewayV2::ApiMapping
    Properties:
      DomainName: !Ref WalletBECustomDomain
      ApiId: !Ref WalletBEApiGwHttpEndpoint
      Stage: !Ref WalletBEAPIStageDefault

  # ECS
  WalletBECluster:
    Type: 'AWS::ECS::Cluster'
    Properties:
      ClusterSettings:
        - Name: containerInsights
          Value: enabled
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-WalletECSCluster"
        - Key: Product
          Value: "GOV.UK sign in"
        - Key: System
          Value: "Wallet Stub BE"
        - Key: Environment
          Value: !Sub "${Environment}"

  # LEGACY ESC SERVICE - soon to be depracated
  WalletBEECSService:
    DependsOn:
      - WalletBELoadBalancerListener
    Type: 'AWS::ECS::Service'
    Condition: DeployLegacyVpcResources
    Properties:
      Cluster: !Ref WalletBECluster
      DeploymentConfiguration:
        DeploymentCircuitBreaker:
          Enable: TRUE
          Rollback: TRUE
      EnableECSManagedTags: false
      HealthCheckGracePeriodSeconds: 60
      LaunchType: FARGATE
      LoadBalancers:
        - ContainerName: app
          ContainerPort: !Ref ContainerPort
          TargetGroupArn: !Ref WalletBELoadBalancerListenerTargetGroupECS
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - !GetAtt WalletBEECSSecurityGroup.GroupId
          Subnets:
            - Fn::ImportValue: !Sub "${LegacyVpcStackName}-ProtectedSubnetIdA"
            - Fn::ImportValue: !Sub "${LegacyVpcStackName}-ProtectedSubnetIdB"
            - Fn::ImportValue: !Sub "${LegacyVpcStackName}-ProtectedSubnetIdC"
      TaskDefinition: !Ref WalletBEECSServiceTaskDefinition
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-WalletECS"
        - Key: Product
          Value: "GOV.UK sign in"
        - Key: System
          Value: "Wallet BE Stub"
        - Key: Environment
          Value: !Sub "${Environment}"

  # SPOKE ESC SERVICE
  WalletBEECSServiceSpoke:
    DependsOn:
      - WalletBELoadBalancerListenerSpoke
    Type: 'AWS::ECS::Service'
    Condition: DeploySpokeVpcResources
    Properties:
      Cluster: !Ref WalletBECluster
      DeploymentConfiguration:
        DeploymentCircuitBreaker:
          Enable: TRUE
          Rollback: TRUE
      EnableECSManagedTags: false
      HealthCheckGracePeriodSeconds: 60
      LaunchType: FARGATE
      LoadBalancers:
        - ContainerName: app
          ContainerPort: !Ref ContainerPort
          TargetGroupArn: !Ref WalletBELoadBalancerListenerTargetGroupECSSpoke
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - !GetAtt WalletBEECSSecurityGroupSpoke.GroupId
          Subnets:
            - Fn::ImportValue: !Sub "${VpcStackName}-ProtectedSubnetIdA"
            - Fn::ImportValue: !Sub "${VpcStackName}-ProtectedSubnetIdB"
            - Fn::ImportValue: !Sub "${VpcStackName}-ProtectedSubnetIdC"
      TaskDefinition: !Ref WalletBEECSServiceTaskDefinition
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-WalletECS-spoke"
        - Key: Product
          Value: "GOV.UK sign in"
        - Key: System
          Value: "Wallet BE Stub"
        - Key: Environment
          Value: !Sub "${Environment}"
  # ************************************** 

  WalletBEECSServiceTaskDefinition:
    Type: 'AWS::ECS::TaskDefinition'
    Properties:
      ContainerDefinitions:
        - Essential: true
          # Image is replaced by ./build-and-deploy-image.sh (manual dev deployment) or GitHub Actions (pipeline deployments).
          Image: CONTAINER-IMAGE-PLACEHOLDER
          Name: app
          Environment:
            - Name: SIGNING_KEY_ALIAS
              Value: !Ref CredentialIssuerSigningKeyAlias
            - Name: AWS_REGION
              Value: !Sub "${AWS::Region}"
            - Name: ENVIRONMENT
              Value: !Sub "${Environment}"
            - Name: SELF_URL
              Value: !If
                - StackNameIsWalletCredIssuerBE
                - !Sub
                  - "https://${SelfUrl}"
                  - SelfUrl: !FindInMap [EnvironmentVariables, !Ref Environment, SelfUrl]
                - !Sub
                  - "https://${AWS::StackName}-${SelfUrl}"
                  - SelfUrl: !FindInMap [EnvironmentVariables, !Ref Environment, SelfUrl]
            - Name: OIDC_CLIENT_ID
              Value: !Sub "{{resolve:ssm:/${DocumentBuilderStackName}/Config/OIDC/Client/Id}}"
            - Name: CREDENTIAL_STORE_URL
              Value: !Sub
                - "https://${CredentialStoreUrl}"
                - CredentialStoreUrl: !FindInMap [EnvironmentVariables, !Ref Environment, CredentialStoreUrl]
            - Name: WALLET_APP_DEEP_LINK_URL
              Value: !Sub
                - "https://${WalletAppDeepLinkUrl}"
                - WalletAppDeepLinkUrl: !FindInMap [EnvironmentVariables, !Ref Environment, WalletAppDeepLinkUrl]
            - Name: CREDENTIAL_OFFER_CACHE
              Value: !Ref CredentialOfferTable
            - Name: CREDENTIAL_STORE
              Value: !Ref CredentialTable
            - Name: ONE_LOGIN_AUTH_SERVER_URL
              Value: !FindInMap
                - EnvironmentVariables
                - !Ref Environment
                - AuthServerUrl
            - Name: CERTIFICATE_AUTHORITY_ARN
              Value: !FindInMap [EnvironmentVariables, !Ref Environment, CertificateAuthorityArn]
            - Name: CERTIFICATES_BUCKET_NAME
              Value: !FindInMap [EnvironmentVariables, !Ref Environment, CertificatesBucketName]
            - Name: DOCUMENT_SIGNING_KEY_1_ARN
              Value: !FindInMap [EnvironmentVariables, !Ref Environment, DocumentSigningKey1Arn]
            - Name: STATUS_LIST_URL
              Value: !Sub
                - "https://${StatusListUrl}"
                - StatusListUrl: !FindInMap [EnvironmentVariables, !Ref Environment, StatusListUrl]
            - Name: STATUS_LIST_CLIENT_ID
              Value: !Sub "{{resolve:ssm:/${AWS::StackName}/Config/StatusList/Client/Id}}"
          PortMappings:
            - ContainerPort: !Ref ContainerPort
              Protocol: tcp
          ReadonlyRootFilesystem: true
          MountPoints:
            - ContainerPath: /tmp
              SourceVolume: tmp-volume
              ReadOnly: false
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref WalletBEECSAccessLogsGroup
              awslogs-region: !Sub ${AWS::Region}
              awslogs-stream-prefix: !Sub wallet-stub-back-${Environment}
      Cpu: '1024' # Increased to use 1 CPU unit
      ExecutionRoleArn: !GetAtt WalletBEECSTaskExecutionRole.Arn
      Memory: '2048' # Upgraded memory value to match with increased CPU
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn: !GetAtt WalletBEECSTaskRole.Arn
      Volumes:
        - Name: tmp-volume
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-WalletTaskDefinition"
        - Key: Product
          Value: "GOV.UK sign in"
        - Key: System
          Value: "Wallet Stub BE"
        - Key: Environment
          Value: !Sub "${Environment}"

  WalletBEECSTaskExecutionRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: 2012-10-17
      Policies:
        - PolicyName: PullWalletBackImage
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "ecr:BatchGetImage"
                  - "ecr:GetDownloadUrlForLayer"
                  - "ecr:BatchCheckLayerAvailability"
                Resource:
                  - !FindInMap [EnvironmentVariables, !Ref Environment, CredentialIssuerImageRepository]
              - Effect: Allow
                Action:
                  - "ecr:GetAuthorizationToken"
                Resource:
                  - "*"
              - Effect: Allow
                Action:
                  - "logs:CreateLogStream"
                  - "logs:PutLogEvents"
                Resource:
                  - !GetAtt "WalletBEECSAccessLogsGroup.Arn"
                  - !Sub "${WalletBEECSAccessLogsGroup.Arn}:*"
      PermissionsBoundary: !If
        - UsePermissionsBoundary
        - !Ref PermissionsBoundary
        - !Ref AWS::NoValue

  WalletBEECSTaskRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: 2012-10-17
      Policies:
        - PolicyName: TaskPermissions
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - 'dynamodb:PutItem'
                  - 'dynamodb:GetItem'
                  - 'dynamodb:DeleteItem'
                Resource: !GetAtt CredentialOfferTable.Arn
              - Effect: Allow
                Action:
                  - 'dynamodb:PutItem'
                  - 'dynamodb:GetItem'
                  - 'dynamodb:DeleteItem'
                Resource: !GetAtt CredentialTable.Arn
              - Effect: Allow
                Action:
                  - 'dynamodb:Query'
                Resource:  !Sub ${CredentialTable.Arn}/index/*
              - Effect: Allow
                Action:
                  - 'kms:Decrypt'
                  - 'kms:Encrypt'
                  - 'kms:GenerateDataKey'
                Resource: !GetAtt CRIDatabaseKmsKey.Arn
              - Effect: Allow
                Action:
                  - 's3:GetObject'
                Resource:
                  - !Sub
                    - 'arn:aws:s3:::${BucketName}'
                    - BucketName: !FindInMap [EnvironmentVariables, !Ref Environment, CertificatesBucketName]
                  - !Sub
                    - 'arn:aws:s3:::${BucketName}/*'
                    - BucketName: !FindInMap [EnvironmentVariables, !Ref Environment, CertificatesBucketName]
              - Effect: Allow
                Action:
                  - 'kms:Sign'
                  - 'kms:DescribeKey'
                Resource:
                  - !FindInMap [EnvironmentVariables, !Ref Environment, DocumentSigningKey1Arn]
              - !If
                - IsStaging
                - Effect: Allow
                  Action:
                    - 'execute-api:Invoke'
                  Resource: 'arn:aws:execute-api:*:*:*'
                - !Ref AWS::NoValue
      PermissionsBoundary: !If
        - UsePermissionsBoundary
        - !Ref PermissionsBoundary
        - !Ref AWS::NoValue

  # KMS
  CredentialIssuerSigningKey:
    Type: AWS::KMS::Key
    Properties:
      Description: Asymmetric key for signing tokens
      Enabled: true
      EnableKeyRotation: false
      KeyPolicy:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              AWS: !Sub 'arn:aws:iam::${AWS::AccountId}:root'
            Action:
              - "kms:*"
            Resource:
              - "*"
          - Effect: Allow
            Principal:
              AWS: !GetAtt WalletBEECSTaskRole.Arn
            Action:
              - "kms:Sign"
              - "kms:GetPublicKey"
              - "kms:DescribeKey"
            Resource:
              - "*"
      KeySpec: ECC_NIST_P256
      KeyUsage: SIGN_VERIFY
      MultiRegion: false

  CredentialIssuerSigningKeyAlias:
    Type: AWS::KMS::Alias
    Properties:
      AliasName: !Sub "alias/credential-signing-key-${AWS::StackName}"
      TargetKeyId: !Ref CredentialIssuerSigningKey

  CRIDatabaseKmsKey:
    Type: AWS::KMS::Key
    Properties:
      EnableKeyRotation: true
      KeyPolicy:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              AWS: !Sub arn:aws:iam::${AWS::AccountId}:root
            Action:
              - kms:*
            Resource:
              - "*"

  CRIDatabaseKmsKeyAlias:
    Type: AWS::KMS::Alias
    Properties:
      AliasName: !Sub "alias/database-encryption-key-${AWS::StackName}"
      TargetKeyId: !Ref CRIDatabaseKmsKey

  # DYNAMODB
  CredentialOfferTable:
    Type: AWS::DynamoDB::Table
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      AttributeDefinitions:
        - AttributeName: credentialIdentifier
          AttributeType: S
      BillingMode: PAY_PER_REQUEST
      TableName: !Sub "${AWS::StackName}-credential_offer_cache"
      KeySchema:
        - AttributeName: credentialIdentifier
          KeyType: HASH
      TimeToLiveSpecification:
        AttributeName: timeToLive
        Enabled: true
      PointInTimeRecoverySpecification:
        PointInTimeRecoveryEnabled: true
      SSESpecification:
        SSEEnabled: true
        SSEType: KMS
        KMSMasterKeyId: !GetAtt CRIDatabaseKmsKey.Arn
      Tags:
        - Key: Product
          Value: GOV.UK Sign In
        - Key: System
          Value: Mobile Wallet
        - Key: Owner
          Value: Mobile Wallet Team
        - Key: Environment
          Value: !Ref "Environment"

  CredentialTable:
    Type: AWS::DynamoDB::Table
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      AttributeDefinitions:
        - AttributeName: credentialIdentifier
          AttributeType: S
        - AttributeName: documentId
          AttributeType: S
      BillingMode: PAY_PER_REQUEST
      TableName: !Sub "${AWS::StackName}-credential_store"
      KeySchema:
        - AttributeName: credentialIdentifier
          KeyType: HASH
      TimeToLiveSpecification:
        AttributeName: timeToLive
        Enabled: true
      GlobalSecondaryIndexes:
        - IndexName: documentIdIndex
          KeySchema:
            - AttributeName: documentId
              KeyType: HASH
          Projection:
            ProjectionType: ALL
      PointInTimeRecoverySpecification:
        PointInTimeRecoveryEnabled: true
      SSESpecification:
        SSEEnabled: true
        SSEType: KMS
        KMSMasterKeyId: !GetAtt CRIDatabaseKmsKey.Arn
      Tags:
        - Key: Product
          Value: GOV.UK Sign In
        - Key: System
          Value: Mobile Wallet
        - Key: Owner
          Value: Mobile Wallet Team
        - Key: Environment
          Value: !Ref "Environment"

  # ALARMS
  ExampleCredIssuerLowContainerTaskCountAlarm:
    Condition: IsBuildOrStagingOrInt
    DependsOn:
      - WalletBECluster
      - WalletBEECSService
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmName: !Sub "${AWS::StackName}-EgCredIssuerLowContainerTaskCountAlarm"
      AlarmDescription: Trigger a warning if the running container task count drops below 1
      ActionsEnabled: false
      InsufficientDataActions: []
      Dimensions: []
      EvaluationPeriods: 1
      DatapointsToAlarm: 1
      Threshold: 1
      ComparisonOperator: LessThanThreshold
      TreatMissingData: breaching
      Metrics:
        - Id: containerTaskCount
          ReturnData: true
          MetricStat:
            Metric:
              Namespace: ECS/ContainerInsights
              MetricName: RunningTaskCount
              Dimensions:
                - Name: ClusterName
                  Value: !Ref WalletBECluster
                - Name: ServiceName
                  Value: !GetAtt WalletBEECSService.Name
            Period: 60
            Stat: Minimum

  FE4XXErrorAlarm:
    Condition: IsBuildOrStagingOrInt
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmName: !Sub "${AWS::StackName}-FE4XXErrorAlarm"
      AlarmDescription: Trigger the alarm if errorThreshold exceeds 50% with a minimum of 5 invocations in the last 30 minutes
      ActionsEnabled: false
      InsufficientDataActions: []
      Dimensions: []
      EvaluationPeriods: 1
      DatapointsToAlarm: 1
      Threshold: 50
      ComparisonOperator: GreaterThanOrEqualToThreshold
      TreatMissingData: notBreaching
      Metrics:
        - Id: errorThreshold
          Label: errorThreshold
          ReturnData: true
          Expression: IF(invocations<5,0,errorPercentage)
        - Id: invocations
          ReturnData: false
          MetricStat:
            Metric:
              Namespace: AWS/ApiGateway
              MetricName: Count
              Dimensions:
                - Name: ApiId
                  Value: !Ref WalletBEApiGwHttpEndpoint
            Period: 1800
            Stat: Sum
        - Id: error
          ReturnData: false
          MetricStat:
            Metric:
              Namespace: AWS/ApiGateway
              MetricName: 4xx
              Dimensions:
                - Name: ApiId
                  Value: !Ref WalletBEApiGwHttpEndpoint
            Period: 1800
            Stat: Sum
        - Id: errorPercentage
          Label: errorPercentage
          ReturnData: false
          Expression: (error/invocations) * 100

  ECRIHeartbeatAlarm:
    Condition: IsIntegration
    Type: AWS::CloudWatch::Alarm  
    Properties:
      AlarmName: !Sub "${AWS::StackName}-ECRIHeartbeatAlarm"
      AlarmDescription: "ExampleCRI-Heartbeat Synthetic-Canary Alarm: 2xx LessThanThreshold 1"
      MetricName: 2xx 
      Namespace: CloudWatchSynthetics  
      Dimensions:  
        - Name: CanaryName  
          Value: example_cri_heartbeat  
      Period: 60  # 1 minute in seconds
      EvaluationPeriods: 1  
      Statistic: Sum  
      ComparisonOperator: LessThanThreshold  
      Threshold: 1.0  
      TreatMissingData: ignore  
      ActionsEnabled: true
      AlarmActions:
        - !ImportValue alarm-sns-topic-warning
      OKActions:
        - !ImportValue alarm-sns-topic-warning

Outputs:
  CredIssuerFriendlyUrl:
    Description: Friendly URL for the deployed credential issuer service
    Value: !If
      - StackNameIsWalletCredIssuerBE
      - !FindInMap [EnvironmentVariables, !Ref Environment, SelfUrl]
      - !Sub
        - "${AWS::StackName}-${SelfUrl}"
        - SelfUrl: !FindInMap [EnvironmentVariables, !Ref Environment, SelfUrl]
